# font-authentication

./: .gitignore  README.md  app.py  birdfont_modifier.py  create_letter_key.py  font1.txt  letter_key_to_svg.py  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.py  validator.py  zh.py
.github/: CODEOWNERS  dependabot.yml
.github/linters/: .flake8  .htmlhintrc  .jscpd.json  .markdown-lint.yml  .mega-linter.yml  .prettierignore  .ruff.toml  .stylelintrc.json  package-lock.json  package.json
.github/workflows/: linter.yml  manually_lint.yml  pytest.yml  uv-lock-sync.yml
example/: Base.birdfont  dict.txt
font_generator/: cjk.py  create_letter_key.py  letter_key_to_svg.py  zh.py
font_generator/other/: check_dup_char.py  legacy_chinese_char_ripper.py  parse_tables.py
other/: check_dup_char.py  legacy_chinese_char_ripper.py
static/: style.css
templates/: base.html.jinja  page.html.jinja
templates/validation/: hard.html.jinja  hardest.html.jinja  simple.html.jinja
tests/: conftest.py  test_check_preset_strings.py  test_letter_key.py  test_validator.py  test_web.py  test_zh.py
web/: __init__.py  validator.py
web/static/: style.css
web/templates/: base.html.jinja  home.html.jinja  page.html.jinja
web/templates/authentication/: hard.html.jinja  hardest.html.jinja  simple.html.jinja
web/templates/validation/: hard.html.jinja  hardest.html.jinja  simple.html.jinja
