[project]
name = "font-authentication"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.3",
    "flask-session==0.8.0",
    "flask-sqlalchemy==3.1.1",
    "pycryptodomex==3.23.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.1.0",
    "pytest-cov==7.1.0",
    "pytest-html==4.2.0",
    "pytest-order==1.5.0",
    "ruff==0.15.17",
    "uv==0.11.21"
]

# --- RUFF CONFIGURATION ---
[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E/W = pycodestyle, F = Pyflakes, I = isort
select = ["E", "W", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- PYTEST CONFIGURATION ---
[tool.pytest.ini_options]
addopts = [
    "--cov=.",                          # Measure coverage of the current root directory
    "--cov-report=term-missing",        # Print missing lines directly to the terminal
    "--cov-report=html",                # Generate interactive HTML coverage in 'htmlcov/'
    "--html=htmlcov/test-report.html",  # Generate a standalone HTML test results report in 'htmlcov/'
    "--self-contained-html",            # Ensure the HTML report is fully offline-compatible
    "-ra",                              # Show a summary of all test statuses at the end
    "--tb=short",                       # Shorten tracebacks to keep console logs readable
]
testpaths = ["tests"]
norecursedirs = [".venv", "venv", ".git", "node_modules", ".ruff_cache"]

[tool.coverage.run]
branch = true                   # Enforce strict branch path execution checks
source = ["."]

[tool.coverage.report]
fail_under = 80                 # Fail the test suite execution if total coverage drops below 80%
exclude_also = [
    # SEE: https://coverage.readthedocs.io/en/latest/excluding.html
    # Comments to turn coverage on and off:
    #      # no cover: start   /   # no cover: stop
    'no cover: start(?s:.)*?no cover: stop',
    # A pragma comment that excludes an entire file:
    #      # pragma: exclude file
    '\A(?s:.*# pragma: exclude file.*)\Z',
]